# ZAVOGLES-GUI

./: .gitignore  Cargo.toml  build.rs  build_rs_cov.profraw
.github/workflows/: android.yml  build.yml
crates/k1-android/: Cargo.toml
crates/k1-android/src/: lib.rs
crates/k1-core/: Cargo.toml
crates/k1-core/src/: lib.rs  math.rs  memory.rs
crates/k1-ui/: Cargo.toml
crates/k1-ui/src/: anim.rs  lib.rs  text.rs
crates/k1-vulkan/: Cargo.toml
crates/k1-vulkan/src/: backend.rs  lib.rs
k1-app/: Cargo.toml  build.rs
k1-app/android/: AndroidManifest.xml
k1-app/java/com/versonr7/zavogles/: ZavoglesActivity.java
k1-app/src/: activity.rs  lib.rs
k1-gles/: Cargo.toml  build.rs
k1-gles/src/: lib.rs
k1-math/: Cargo.toml
k1-math/src/: lib.rs  lib.rs.patch
k1-sys/: Cargo.toml
k1-sys/src/: lib.rs
shaders/: ui.frag  ui.vert  wave.frag  wave.vert
src/: lib.rs
