[workspace]
members = [
    "crates/k1-core",
    "crates/k1-vulkan", 
    "crates/k1-ui",
    "crates/k1-android",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["K1 Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/versonr7/K1-Platform"

[workspace.dependencies]
# Core - no_std compatible
k1-core = { path = "crates/k1-core" }

# Vulkan backend
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ash-window = "0.13"

# Android
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"
log = "0.4"
ndk = "0.9"
ndk-sys = "0.6"

# Math
glam = { version = "0.29", default-features = false, features = ["libm"] }

# Utilities
thiserror = "1.0"
bitflags = "2.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
