[workspace]
members = [
    "k1-app",
    "k1-gles",
    "k1-math",
    "k1-sys",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["K1 Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/versonr7/K1-Platform"

[workspace.dependencies]
# Math
k1-math = { path = "k1-math" }

# System
k1-sys = { path = "k1-sys" }

# Android
android_logger = "0.14"
log = "0.4"
ndk = "0.9"
ndk-sys = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1