[workspace]
members = [
    "k1-app",
    "k1-gles",
    "k1-math",
    "k1-sys",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["K1 Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/versonr7/ZAVOGLES-GUI"

[workspace.dependencies]
# Math
k1-math = { path = "k1-math" }

# System
k1-sys = { path = "k1-sys" }

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1
#strip = true
# panic strategy: default is unwind, but our dummy symbols handle Android

[profile.dev]
opt-level = 1
# panic strategy: default is unwind
