[package]
name = "k1-app"
version = "0.1.0"
edition = "2021"
authors = ["versonr7"]
description = "ZAVOGLES-GUI - Zero Allocation Vulkan OpenGL ES GUI"
license = "MIT"

[lib]
name = "k1_app"
crate-type = ["cdylib"]

[dependencies]
k1-math = { path = "../k1-math" }
k1-sys = { path = "../k1-sys" }
k1-gles = { path = "../k1-gles" }
heapless = "0.9.3"
libm = "0.2.16"

[package.metadata.android]
package = "com.versonr7.zavogles"
build_targets = ["aarch64-linux-android"]
java_sources = "java"  # ← ADD THIS! Points to k1-app/java/

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 34

[package.metadata.android.application]
label = "ZAVOGLES-GUI"
debuggable = true

[[package.metadata.android.application.activity]]
name = "com.versonr7.zavogles.ZavoglesActivity"
label = "ZAVOGLES-GUI"
exported = true

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]
