[package]
name = "k1-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
k1-core = { workspace = true }
k1-vulkan = { workspace = true }
k1-ui = { workspace = true }

android-activity = { workspace = true }
android_logger = { workspace = true }
log = { workspace = true }
ndk = { workspace = true }

[package.metadata.android]
package = "rust.k1_app"
apk_name = "k1-platform"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
min_sdk_version = 24
target_sdk_version = 34

permissions = [
    "android.permission.INTERNET",
]

activity_theme = "@android:style/Theme.NoTitleBar.Fullscreen"
main_activity_attributes = { "android:screenOrientation" = "landscape" }
